Bug 1745551 - Update nsWindow::mMouseTransparent in nsWindow::SetMouseTransparent. r=stransky

This doesn't repro on Wayland because of this workaround:

  https://searchfox.org/mozilla-central/rev/5909d5b7f3e247dddff8229e9499db017eb438e2/layout/xul/nsMenuPopupFrame.cpp#399

But basically if we get initialized with pointer-events: none, then
update the style and then show and configure the gtk window, we
configure the wrong transparency.

Differential Revision: https://phabricator.services.mozilla.com/D133570